--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,38 +1,51 @@
 // Resets, Clearfix, etc
+@import './partials/reset';
+@import './partials/clearfix';
 
 // Variables
- 
-// Media Query Ranges 
- 
+$dark-color: #222;
+$light-color: orange;
+$bright-color: white;
+$g-padding: 20px;
+
+// Media Query Ranges
+
 // Mixins
+
+@mixin block_font($font-size, $font-color) {
+  font-size: $font-size;
+  color: $font-color;
+}
 
 // Styles
 body{
-  background-color: orange;
+  background-color: $dark-color;
   text-align: center;
-  color: #EEE;
+  color: $light-color;
 }
- 
+
 h1, h2, h3, h4{
   font-family: "Helvetica Neue", "Helvetica", sans-serif;
 }
- 
+
 h1{
   padding: 20px;
+  @include block_font(3.5rem, $light-color);
 }
- 
+
 h2{
- 
+  @include block_font(2.2rem, $dark-color);
 }
- 
- 
+
+
 .block_family{
-  max-width:350px;
+  max-width:800px;
   margin:auto;
 }
- 
+
 .block_family li{
-  background-color: #222;
+  background-color: $light-color;
   margin-bottom: 20px;
   padding: 20px;
+  color: $dark-color;
 }
