--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -10,6 +10,7 @@ $g-padding: 20px;
 
 // Media Query Ranges
 
+
 // Mixins
 
 @mixin block_font($font-size, $font-color) {
@@ -18,8 +19,9 @@ $g-padding: 20px;
 }
 
 // Styles
+
 body{
-  background-color: $dark-color;
+  background-color: $light-color;
   text-align: center;
   color: $light-color;
 }
@@ -30,22 +32,94 @@ h1, h2, h3, h4{
 
 h1{
   padding: 20px;
-  @include block_font(3.5rem, $light-color);
+  @include block_font(3.5rem, $dark-color);
 }
 
 h2{
-  @include block_font(2.2rem, $dark-color);
+  @include block_font(2.2rem, $bright-color);
 }
 
 
 .block_family{
-  max-width:800px;
+  max-width:350px;
   margin:auto;
 }
 
 .block_family li{
-  background-color: $light-color;
+  background-color: $dark-color;
   margin-bottom: 20px;
   padding: 20px;
-  color: $dark-color;
+  color: $bright-color;
+}
+
+
+
+@media screen and (min-width: 600px) {
+  body{
+    background-color: $light-color;
+    text-align: center;
+    color: $light-color;
+  }
+
+  h1, h2, h3, h4{
+    font-family: "Helvetica Neue", "Helvetica", sans-serif;
+  }
+
+  h1{
+    padding: 20px;
+    @include block_font(3.5rem, $bright-color);
+  }
+
+  h2{
+    @include block_font(2.2rem, $light-color);
+  }
+
+
+  .block_family{
+    max-width:500px;
+    margin:auto;
+  }
+
+  .block_family li{
+    background-color: $bright-color;
+    margin-bottom: 20px;
+    padding: 20px;
+    color: $light-color;
+  }
+}
+
+
+
+@media screen and (min-width: 900px) {
+  body{
+    background-color: $dark-color;
+    text-align: center;
+    color: $light-color;
+  }
+
+  h1, h2, h3, h4{
+    font-family: "Helvetica Neue", "Helvetica", sans-serif;
+  }
+
+  h1{
+    padding: 20px;
+    @include block_font(3.5rem, $light-color);
+  }
+
+  h2{
+    @include block_font(2.2rem, $dark-color);
+  }
+
+
+  .block_family{
+    max-width:800px;
+    margin:auto;
+  }
+
+  .block_family li{
+    background-color: $light-color;
+    margin-bottom: 20px;
+    padding: 20px;
+    color: $dark-color;
+  }
 }
