--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -54,7 +54,7 @@ h2{
 
 
 
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 600px) and (max-width: 899px) {
   body{
     background-color: $light-color;
     text-align: center;
